# HCDfCBD

./: .dockerignore  .gitignore  Dockerfile  README.md  data_processing_TCGA.ipynb  deep_imv_example.ipynb  docker-compose.yaml  feature_importance.ipynb  multiview_mlp_example.ipynb  pyproject.toml  requirements.txt  setup.py
R/: importance_plot  importance_plot.R
R/examples/: R-fi-plots.R
diomics/cli/: vi_pipeline.py
diomics/experiments/: data.py
diomics/featimportance/: comparison.py  igrads.py  plot_helpers.py  shapley.py
diomics/models/: fc_imv.py  multi_mlp.py
docs/source/: conf.py  diomics.featimportance.rst  diomics.models.rst  diomics.rst  index.rst  modules.rst
featimportance/: plot_helpers.py
lambda/: README.md  lambda_function.py
models/: fc_imv.py  multi_mlp.py
notebooks/: check_by_feature_variability.qmd  data_processing_TCGA.ipynb  data_processing_TCGA.qmd  deep_imv_example.ipynb  deep_imv_example.qmd  deep_imv_view_missing.qmd  fake_edata_experiments.qmd  feature_importance.ipynb  feature_importance.qmd  feature_importance_intermediate.qmd  inspect_mlflow_runs.qmd  multiview_mlp_example.ipynb
