[project]
name = "diomics"
version = "0.1.0"
description = "Deep-learning Importance for multi-Omics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core==1.3.2",
    "matplotlib>=3.10.1",
    "mlflow>=2.20.3",
    "numpy==1.25.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap==0.43",
    "torch==2.0.1",
]
